<resources>
    <string name="app_name">Sharing WishList</string>

    <string name="signIn">Sign In</string>
    <string name="signUp">Sign Up</string>

    <string name="signIn_userId">ID</string>
    <string name="signIn_password">비밀번호</string>
    <string name="signIn_keepSignedIn">로그인 유지</string>
    <string name="signIn_goToSignUp">아직 계정이 없으신가요?</string>
    <string name="signIn_cannotSignIn">로그인할 수 없습니다</string>

    <string name="signUp_userId">ID</string>
    <string name="signUp_nickName">Nickname</string>
    <string name="signUp_password">비밀번호</string>
    <string name="signUp_repeatPassword">비밀번호 확인</string>
    <string name="signUp_goToSignIn">이미 계정이 있으신가요?</string>
    <string name="signUp_blankError">정보를 입력해 주세요</string>
    <string name="signUp_repeatPasswordError">비밀번호가 일치하지 않습니다</string>
    <string name="signIn_cannotSignUp">회원가입할 수 없습니다</string>

    <string name="main_clearDialog">위시를 달성하시겠습니까?</string>
    <string name="main_deleteDialog">삭제하시겠습니까?</string>

    <string name="main_delete_success">삭제 성공!</string>
    <string name="main_delete_failure">삭제 실패..</string>

    <string name="main_dialog_positive">예</string>
    <string name="main_dialog_neutral">취소</string>

    <string name="create_title">위시 제목</string>
    <string name="create_title_formatError">제목의 공백은 허용되지 않습니다</string>
    <string name="create_response_success">위시 생성 성공!</string>
    <string name="create_response_failure">위시 생성 실패..</string>
    <string name="create_contents">위시 내용</string>
    <string name="create_wish_nor">wish-nor</string>
    <string name="create_wish_red">wish-red</string>
    <string name="create_wish_gre">wish-gre</string>
    <string name="create_wish_blu">wish-blu</string>

    <string name="detail_writeComment">작성</string>
    <string name="detail_comment">댓글</string>
    <string name="detail_comment_formatError">댓글의 공백은 허용되지 않습니다</string>
    <string name="logo_description">Logo</string>
</resources>