<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_signUp_userId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:helperTextEnabled="true"
            app:helperTextTextColor="@color/light_red">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_signUp_userId"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/signUp_userId"
                android:inputType="text"
                android:text=""
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_signUp_nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:helperTextEnabled="true"
            app:helperTextTextColor="@color/light_red">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_signUp_nickName"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/signUp_nickName"
                android:inputType="text"
                android:text=""
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_signUp_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:helperTextEnabled="true"
            app:helperTextTextColor="@color/light_red">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_signUp_password"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/signUp_password"
                android:inputType="textPassword"
                android:text=""
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_signUp_repeatPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:helperTextEnabled="true"
            app:helperTextTextColor="@color/light_red">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_signUp_repeatPassword"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/signUp_repeatPassword"
                android:inputType="textPassword"
                android:text=""
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_signUp_signUp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="8dp"
            android:text="@string/signUp"
            android:textAllCaps="false"
            android:textColor="@color/light_blue"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_signUp_goToSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/signUp_goToSignIn"
            android:textColor="@android:color/darker_gray"
            android:textSize="14sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>